// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mocha Package transformer should work with child packages 1`] = `
Object {
  "devDependencies": Object {
    "jest": "^25.2.4",
  },
  "jest": Object {
    "coverageReporters": Array [
      "lcov",
    ],
    "roots": Array [
      "<rootDir>/src",
    ],
    "testPathIgnorePatterns": Array [
      "/node_modules/",
    ],
  },
  "metapak": Object {
    "data": Object {
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "cover": "npm run jest -- --coverage",
    "jest": "NODE_ENV=test jest",
    "test": "npm run jest",
  },
}
`;

exports[`mocha Package transformer should work with some files 1`] = `
Object {
  "devDependencies": Object {
    "coveralls": "^3.0.11",
    "jest": "^25.2.4",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "jest",
      "coveralls",
    ],
  },
  "jest": Object {
    "coverageReporters": Array [
      "lcov",
    ],
    "roots": Array [
      "<rootDir>/src",
    ],
    "testPathIgnorePatterns": Array [
      "/node_modules/",
    ],
  },
  "metapak": Object {
    "data": Object {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "cover": "npm run jest -- --coverage",
    "coveralls": "npm run cover && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
    "jest": "NODE_ENV=test jest",
    "test": "npm run jest",
  },
}
`;
